Fix troubleshooting contrast on header

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ img {
 
 header {
   background-image: url("../images/anchors.svg");
-  background-color: #1e7c74;
   color: #fff;
   font-size: 1.125rem;
   font-style: normal;
